--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: Stephen McKeon
-subtitle: Royal Military College of Canada  Department of Electrical and Computer Engineering
+subtitle: Royal Military College of Canada <br>Department of Electrical and Computer Engineering
 use-site-title: true
 ---
