--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: home
 title: Stephen McKeon
-subtitle: Royal Military College of Canada <br>Department of Electrical and Computer Engineering
+subtitle: |
+  | Department of Electrical and Computer Engineering 
+  | Royal Military College of Canada
 use-site-title: true
 ---
