--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 title: Stephen McKeon
 subtitle: |
-    | Department of Electrical and Computer Engineering 
-    | Royal Military College of Canada
+  Department of Electrical and Computer Engineering 
+  Royal Military College of Canada
 use-site-title: true
 ---
