--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: home
 title: Stephen McKeon
 subtitle: |
-  Department of Electrical and Computer Engineering  
+  Department of Electrical and Computer Engineering  <br>
+  
   Royal Military College of Canada  
 use-site-title: true
 ---
