--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 ---
 layout: home
 title: Stephen McKeon
-subtitle: |
-  Department of Electrical and Computer Engineering  <br>
-  
-  Royal Military College of Canada  
+subtitle: Royal Military College of Canada
 use-site-title: true
 ---
+.second-line-subheading {
+  font-size: 1.6875rem;
+  line-height: 1.1;
+  display: block;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  margin: 0.625rem 0 0;
+}
+
+Department of Electrical and Computer Engineering {: .second-line-subheading :}
