--- a/index.html
+++ b/index.html
@@ -4,12 +4,4 @@ title: Stephen McKeon
 subtitle: Royal Military College of Canada
 use-site-title: true
 ---
-.second-line-subheading {
-  font-size: 1.6875rem;
-  line-height: 1.1;
-  display: block;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  margin: 0.625rem 0 0;
-}
-Department of Electrical and Computer Engineering {: .second-line-subheading :}
+Department of Electrical and Computer Engineering
